python_applications_scripts/applications/app/kubernetesyamls/v1/app-compliancescannernetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-compliancescannernetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: compliancescanner
  podSelector:
    matchLabels:
      run: compliancescanner
